[gd_scene load_steps=7 format=3 uid="uid://j1l5dkxn3xtb"]

[ext_resource type="Script" uid="uid://dcq140n4dc1bs" path="res://scripts/TurretController.gd" id="1_fbjtf"]

[sub_resource type="CylinderMesh" id="CylinderMesh_1qan3"]
top_radius = 1.0
bottom_radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_lmmwq"]

[sub_resource type="SphereShape3D" id="SphereShape3D_fbjtf"]
radius = 20.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fbjtf"]
transparency = 1
shading_mode = 0
albedo_color = Color(0, 1, 0, 0.0705882)

[sub_resource type="SphereMesh" id="SphereMesh_lmmwq"]
material = SubResource("StandardMaterial3D_fbjtf")
radius = 20.0

[node name="TurretTest" type="Node3D"]
script = ExtResource("1_fbjtf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_1qan3")

[node name="StaticBody3D" type="StaticBody3D" parent="." groups=["turrets"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("SphereShape3D_lmmwq")

[node name="RangeArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RangeArea"]
shape = SubResource("SphereShape3D_fbjtf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RangeArea"]
mesh = SubResource("SphereMesh_lmmwq")
skeleton = NodePath("../CollisionShape3D")

[connection signal="area_entered" from="RangeArea" to="." method="_on_range_area_area_entered"]
[connection signal="area_exited" from="RangeArea" to="." method="_on_range_area_area_exited"]
[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_area_body_exited"]
